* renamed --ui-new to --next
* renamed --ui-toggle to --toggle
* fixed incorrect endpoint detection for Xbox1 controller
* native Playstation 3 USB controller support
* added axis rotation modifier
* renamed A, B, X, Y axis to BTN_A, BTN_B, BTN_X, BTN_Y to avoid
  confusion with X1, Y1
* added --list-all, --list-key, -list-rel, ... to display all
  available symbolic name


xboxdrv 0.6.5 - (22/Jan/2011)
=============================

* fixed incorrect variable initalisation, leading to button presses
  getting lost sometimes
* fixed initialisation issue for Chatpad connected to controllers with
  bcdDevice 0x0114


xboxdrv 0.6.4 - (13/Jan/2011)
=============================

* fixed bug that disabled all axis when a button was pressed
* fixed some missing include


xboxdrv 0.6.3 - (10/Jan/2011)
=============================

* chatpad support (still rough), special thanks to Jani Virta, Andy
  Kirkham, dwomac and GAFBlizzard who helped make it possible
* added  --chatpad, --chatpad-no-init and --chatpad-debug
* added --headset, --headset-dump FILE and --headset-play FILE, for
  experimentation only
* added optional abs:/rel:/key: prefixes to --ui-axismap
* added input filters for --axismap and --buttonmap
* fixed multiple bugs that made it impossible to assign events to
  specific devices
* fixed axis getting stuck when using a shift key
* fixed incorrect error handling on fork()/exec()


xboxdrv 0.6.2 - (31/Dec/2010)
=============================

* merged Xbox360 guitar handling into the regular Xbox360 controller
  handling, use --guitar to get the old mapping back
* added generic event filter framework
* added toggle button filter
* added invert button filter
* added auto fire button filter
* added log filter for button and axis
* added invert axis filter
* added sensitivity axis filter
* added relative axis filter
* added response curve axis filter
* added deadzone axis filter
* added calibration axis filter