@@ -42,31 +42,17 @@ $ dput my-ppa ../xboxdrv_0.7.0-1~lucid1_source.changes
 Stuff to do before 0.7.0 release:
 =================================
 
-* AxisSensitivity filter has overflow issue 
-
 Daemon Related Stuff
 ====================
 
 * cleanup device_id, don't manually do (slot<<16) | devid
-
-* might need magic to give device-ids in a slot fashion: 
-  from: 1-ABS_X   (second uinput device)
-  to:   2.1-ABS_X (third uinput device for the second slot)
-   2.mouse-BTN_MIDDLE ?!
-   1.-BTN_MIDDLE
-   1.auto-BTN_MIDDLE
-   auto-BTN_MIDDLE
-
-  change syntax: BTN_MIDDLE@mouse, BTN_MIDDLE@2.mouse
-
-  must make sure it doesn't conflict with anything
 
 List Output
 ===========
 
 * update docu on force feedback for multi controller
 
-* rename --list-key to --help-key?
+* rename --list-key to --help-key? -> yep
 
 * turn EnumBox into singleton
 
