@@ -60,8 +60,13 @@ private:
   bool m_device_id_resolved;
 };
 
-/** Takes "1-BTN_A" splits it into "1", "BTN_A" */
-void split_event_name(const std::string& str, std::string* event_str, int* device_id);
+/** in: "BTN_A@2" 
+    out: "BTN_A", SLOTID_AUTO, 2
+
+    in: "BTN_A@mouse.2" 
+    out: "BTN_A", 3, DEVICEID_MOUSE
+ */
+void split_event_name(const std::string& str, std::string* event_str, int* slot_id, int* device_id);
 
 #endif
 
